test : add GET/top-athletes integration test