@@ -24,9 +24,10 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-web")
     // mysql connector
     implementation("mysql:mysql-connector-java:8.0.33")
-    implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
     runtimeOnly("com.h2database:h2")
+    // gson
+    implementation("com.google.code.gson:gson:2.10")
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
@@ -49,4 +50,7 @@ kotlin {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+    jvmArgs(
+        "--add-opens", "java.base/java.time=ALL-UNNAMED"
+    )
 }
